--- a/public/config.html
+++ b/public/config.html
@@ -62,6 +62,23 @@
             background: #ff000033;
             color: #ff4444;
         }
+        .install-button {
+            display: none;
+            margin-top: 20px;
+        }
+        .install-button a {
+            display: block;
+            background: #2196F3;
+            color: white;
+            text-align: center;
+            padding: 10px 20px;
+            border-radius: 4px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .install-button a:hover {
+            background: #1976D2;
+        }
     </style>
 </head>
 <body>
@@ -75,6 +92,11 @@
             <button type="submit">Save Configuration</button>
         </form>
         <div id="message" class="message" style="display: none;"></div>
+        <div id="installButton" class="install-button">
+            <a href="stremio://yes-movies-catalog-59a8b3211813.herokuapp.com/manifest.json">
+                Install in Stremio
+            </a>
+        </div>
     </div>
 
     <script>
@@ -100,6 +122,8 @@
                 if (response.ok) {
                     messageDiv.className = 'message success';
                     messageDiv.textContent = 'Configuration saved successfully!';
+                    // Show install button after successful configuration
+                    document.getElementById('installButton').style.display = 'block';
                 } else {
                     messageDiv.className = 'message error';
                     messageDiv.textContent = data.error || 'Failed to save configuration';
@@ -118,6 +142,8 @@
             .then(data => {
                 if (data.rdApiKey) {
                     document.getElementById('rdApiKey').value = data.rdApiKey;
+                    // Show install button if configuration exists
+                    document.getElementById('installButton').style.display = 'block';
                 }
             })
             .catch(console.error);
